src/objects/CBL_Service__c.object
<CustomObject>
    <description>Holds the organization services information for a Coffee Baseline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_Services</relationshipLabel>
        <relationshipName>CBL_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReaseonVisitNotUseful__c</fullName>
        <label>ReaseonVisitNotUseful</label>
        <picklist>
            <picklistValues>
                <fullName>El objetivo de la visita no fue claro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al técnco le faltaban conocimientos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fue muy rápida y poco útil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_Service_Submission</relationshipLabel>
        <relationshipName>CBL_Service_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>anualTecnicoVisits__c</fullName>
        <label>anualTecnicoVisits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>certificationTrainings__c</fullName>
        <label>certificationTrainings</label>
        <picklist>
            <picklistValues>
                <fullName>Comercio Justo (FLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico UE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico JAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orgánico NOP-USDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.A.F.E practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainforest Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amigable con aves/SBF (Bird friendly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café de Mujer/Café femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPP/Small  Producers/Pequeño Productor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>contractsToSell_BuyCoffee__c</fullName>
        <label>contractsToSell&amp;BuyCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>creditServiceImprovements__c</fullName>
        <label>creditServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>El trámite debe ser más rápido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los plazos deberían ser mayores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los montos deben aumentar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasas de interés altas vs  otras org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No puedo cumplir con los requisitos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>creditServiceScoring__c</fullName>
        <label>creditServiceScoring</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gatheringServiceImprovements__c</fullName>
        <label>gatheringServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>Precio más alto que otros compradores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pago más rápido que otros compradores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acopio y entregas más rápidas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>gatheringServiceScore__c</fullName>
        <label>gatheringServiceScore</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mechanismsComplaints__c</fullName>
        <label>mechanismsComplaints</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>meetingsParticipation__c</fullName>
        <label>meetingsParticipation</label>
        <picklist>
            <picklistValues>
                <fullName>Participa en capacitaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participa en las Asambleas Generales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participa de reuniones en la comunidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No participa en ninguna reunión</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>organizationSatisfaction__c</fullName>
        <label>organizationSatisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Muy contento y muy satisfecho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contento y satisfecho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiferente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferiría pertenecer a otra organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pienso retirarme de la organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No pertenezco a ninguna organización</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>organizationServices__c</fullName>
        <label>organizationServices</label>
        <picklist>
            <picklistValues>
                <fullName>Compra de café/acopio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abastecimiento/Insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacitación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asistencia Técnica (visitas de técnico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crédito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proyectos de mejoramiento comunitario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios para mejoramiento café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro de vida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios / becas escolares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejoramiento de Vivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>supplyingServiceImprovements__c</fullName>
        <label>supplyingServiceImprovements</label>
        <picklist>
            <picklistValues>
                <fullName>Aumentar la cantidad de insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar la disponibilidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precios deberían ser más bajos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiempo de despacho más rápido</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>supplyingServiceScore__c</fullName>
        <label>supplyingServiceScore</label>
        <picklist>
            <picklistValues>
                <fullName>Excelente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bueno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pésimo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trainingTopics__c</fullName>
        <label>trainingTopics</label>
        <picklist>
            <picklistValues>
                <fullName>Variedades del cultivo del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semilleros y almácigos de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establecimiento de plantaciones de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservación de suelos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilidad suelo y nutrición cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de plagas  en el cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de enfermedades en el cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de malezas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo de sombra del cultivo del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>manejo de tejidos (podas y renovación)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo responsable de agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrar equipos y aplicar agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calidad, cosecha y procesamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trazabilidad e innocuidad de cosechas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsabilidad laboral /legislación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno de los anteriores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criterios Fairtrade para prácticas amb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo peligroso, riesgos para salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qué hacer en caso de accidente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso apropiado de fertilizantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedimientos para un uso agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reutilización de desechos orgánicos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>trainingUsefulness__c</fullName>
        <label>trainingUsefulness</label>
        <picklist>
            <picklistValues>
                <fullName>Certificarse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar Productividad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementación de BPAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejoramiento de la Calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>trainingsImproveCrop__c</fullName>
        <label>trainingsImproveCrop</label>
        <picklist>
            <picklistValues>
                <fullName>Muy útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poco útiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No útiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>visitUsefulness__c</fullName>
        <label>visitUsefulness</label>
        <picklist>
            <picklistValues>
                <fullName>Mejorar el cultivo/plantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar almácigos/plantillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cumplir con certificaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No le han sido útiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_Service</label>
    <nameField>
        <displayFormat>SV-{0000000}</displayFormat>
        <label>CBL_Service Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>